Sim Sharing: Changed the messages for formation and removal of junctions to include the junction identifier.
Sim Sharing: Added "reverse light bulb" message, see #3497
Sim Sharing: Added "reverse battery" message, see #3497
Sim Sharing: Added "show value" message for all component types, see #3497
# 3.20.11 (72254) Feb 21, 2013
# 3.20.10 (72253) Feb 21, 2013
Sim Sharing: Fixed: nonContactAmmeter was sending messages when it was unchecked, see #3497
Sim Sharing: Removed message about nonContactAmmeter reported at startup, see #3497
Sim Sharing: Report location on screen where components are moved to as a parameter of the "moved" message, see #3497
Sim Sharing: Fixed: When "more volts" gets checked it should not send "user voltageEditor" changed message, see #3497
Sim Sharing: Fixed: When battery right click menu appears, it was sending user voltageEditor message, see #3497
Sim Sharing: Under the "Advanced" controls: Wire resistivity - Instrument as done for the other sliders, i.e. need start drag, drag (time limited), and end drag.
Sim Sharing: Send messages when switches are opened or closed
Sim Sharing: Voltmeter - value thresholding so that sim sharing messages are only sent when the readout seen by the user changes
Sim Sharing: Time limit current messages from ammeters
Sim Sharing: Time limit voltage messages from voltmeter
Sim Sharing: Made the log voltage match the voltmeter voltage by rounding to the same number of digits
Sim Sharing: Send messages when voltage/resistance editor window activated/deactivated/closed
Sim Sharing: Made the model ID match the user ID for sim sharing messages from the series ammeter.
Sim Sharing: Improved value thresholding for series ammeter so that sim sharing messages are only sent when the readout seen by the user changes.
# 3.20.09 (72232) Feb 20, 2013
2/20/13 Deploy to dev for review with UBC researchers.
Sim Sharing: Added instance id to battery current messages.